# charisma-master

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.gpu.yaml  docker-compose.yaml  example.docker.env  pyproject.toml  requirements.txt
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yaml
.github/workflows/: build.yaml  ci.yml  deploy.yaml  deploy.yml  lint.yml
backend/: .dockerignore  .env.example  Dockerfile  entrypoint.sh  example.docker.env  example.env  flake.nix  pyproject.toml
backend/app/: celery_app.py  config.py  db.py  db_sync.py  main.py
backend/app/logic/: llm_client.py  ml_engine.py  prompts.py  tasks.py
backend/app/logic/endpoints/: analysis.py  status.py  telemetry.py  upload.py
backend/app/logic/ml_engine/: __init__.py  audio.py  constants.py  scoring.py  tempo.py  transcription.py  video.py
backend/app/media/prompts/: criteria_evaluation.txt  criteria_extraction.txt  speech_analysis.txt
backend/app/media/prompts/personas/: kind_mentor.txt  speech_review_specialist.txt  steve_jobs_style.txt  strict_critic.txt
backend/app/models/: schemas.py
backend/app/presets/: default_evaluation.json  general.json  urfu.json
backend/app/prompts/: criteria_evaluation.txt  criteria_extraction.txt  speech_analysis.txt
backend/app/prompts/personas/: kind_mentor.txt
backend/scripts/: export_openapi.py
backend/src/: celery_app.py  config.py  main.py
backend/src/logic/: llm_client.py  ml_engine.py  pdf_generator.py  tasks.py
backend/src/logic/endpoints/: analysis.py  status.py  upload.py
backend/tests/: conftest.py  test_llm_client.py  test_schemas.py  test_tasks.py
backend/tests/test_endpoints/: test_analysis.py  test_status.py  test_telemetry.py  test_upload.py
backend/tests/test_ml_engine/: test_audio.py  test_scoring.py  test_tempo.py  test_transcription.py  test_video.py
docs/: API.md  agentic_competition_research.md
docs/presets/: __init__.py  default.json  urfu.json  urfu_demo_1.json  urfu_demo_2.json
docs/prompts/: competition_product.txt  competition_source.txt  competition_summary.txt  criteria_evaluation.txt  criteria_extraction.txt  speech_analysis.txt
docs/prompts/personas/: speech_review_specialist.txt  steve_jobs_style.txt  strict_critic.txt
frontend/: .dockerignore  Dockerfile  components.json  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/actions/: upload.ts
frontend/components/: ColorBends.tsx  analysis-dashboard.tsx  coming-soon-notification.tsx  eco-mode-toggle.tsx  features-section.tsx  hero.tsx  pdf-export-modal.tsx  processing-overlay.tsx  showcase-section.tsx  smooth-scroll.tsx  video-error-display.tsx  video-player.tsx
frontend/components/analysis/: activity-rings-card.tsx  analysis-dashboard.tsx  confidence-gauge.tsx  insight-card.tsx  standard-criteria-table.tsx  summary-blocks.tsx  tempo-chart.tsx  transcript.tsx
frontend/components/animations/: aurora.tsx
frontend/components/gl/: index.tsx  particles.tsx
frontend/components/landing/: features-section.tsx  hero.tsx
frontend/components/shared/: coming-soon-notification.tsx  pdf-export-modal.tsx  video-player.tsx
frontend/components/ui/: button.tsx  icons.tsx  magnetic-button.tsx  quick-stat.tsx  safari-browser.tsx  scroll-reveal.tsx  spotlight-card.tsx  stat-badge.tsx
frontend/components/upload/: processing-overlay.tsx  upload-hub.tsx
frontend/hooks/: use-video-analysis.ts
frontend/lib/: api.ts  cookie-utils.ts  eco-mode-context.tsx  mock-data.ts
frontend/public/: 62a26154-2d3e-408d-8737-2dbe5255eac6.json  mock-response.json  response_1765796223493.json
frontend/types/: analysis.ts
k8s/base/: configmap.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  secret.yaml
k8s/base/api-gateway/: deployment.yaml  service.yaml
k8s/base/backend/: deployment.yaml  service.yaml
k8s/base/celery/: deployment.yaml  pvc.yaml
k8s/base/frontend/: deployment.yaml  service.yaml
k8s/base/migrator/: job.yaml  rbac.yaml
k8s/base/ml-worker/: deployment.yaml
k8s/base/postgres/: deployment.yaml  pvc.yaml  service.yaml
k8s/base/redis/: deployment.yaml  service.yaml
k8s/base/seaweedfs/: deployment.yaml  pvc.yaml  service.yaml
k8s/overlays/prod/: kustomization.yaml
scripts/: build.sh  load_weight_json.py  upload_demo_to_seaweedfs.py
services/api_gateway/: .dockerignore  Dockerfile  example.docker.env  example.env  pyproject.toml
services/api_gateway/app/: celery_app.py  config.py  main.py
services/api_gateway/app/logic/endpoints/: __init__.py  analysis.py  status.py  upload.py
services/api_gateway/app/models/: schemas.py
services/api_gateway/scripts/: export_openapi.py
services/frontend/: Dockerfile  components.json  next.config.ts  package-lock.json  package.json  tsconfig.json
services/frontend/app/: globals.css  layout.tsx  page.tsx
services/frontend/components/: GradualBlur.tsx
services/frontend/contexts/: eco-mode-context.tsx
services/frontend/hooks/: use-video-analysis.ts  use-visible-when.ts
services/frontend/lib/: api.ts  cookie-utils.ts  utils.ts
services/migrator/: Dockerfile  migrate.py  pyproject.toml
services/ml_worker/: Dockerfile  example.docker.env  example.env  pyproject.toml
services/ml_worker/app/: celery_app.py  config.py
services/ml_worker/app/logic/: competition_research.py  llm_client.py  ml_engine.py  prompts.py  tasks.py
services/ml_worker/app/logic/ml_engine/: __init__.py  audio.py  constants.py  factory.py  protocols.py  scoring.py  tempo.py  video.py
services/ml_worker/app/logic/ml_engine/transcription/: __init__.py  _extract.py  _helpers.py  _model.py  local_whisper.py  openai_whisper.py  sber.py
services/ml_worker/app/models/: schemas.py
src/app/backend/: __main__.py  (+3 more)
src/core/: exceptions.py
tests/: conftest.py  test_schemas.py
tests/test_api_gateway/: conftest.py  test_analysis.py  test_status.py  test_upload.py
tests/test_ml_engine/: conftest.py  test_competition_research.py  test_llm_client.py  test_ml_engine.py
(+80 files in other folders)
