[project]
name = "charisma-master"
version = "0.1.1"
description = "Charisma Master - Python Monorepo"
requires-python = ">=3.12,<3.13"

[dependency-groups]
dev = [
    "pre-commit>=4.0.0",
    "ruff>=0.14.8",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "pytest-cov>=5.0",
]

[tool.ruff]
src = ["app"]
target-version = "py312"
line-length = 79
indent-width = 4
exclude = [
    ".git/",
    "venv/",
    ".venv/",
    "vscode/",
    "__pycache__/",
    ".ruff_cache/",
]

[tool.ruff.lint]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
select = ["E", "F", "N", "I", "C90", "T", "S"]
ignore = []
fixable = ["ALL"]
unfixable = []
per-file-ignores = { "tests/**/*.py" = ["S101"] }

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.uv.workspace]
members = [
    "packages/charisma_schemas",
    "packages/charisma_storage",
    "services/api_gateway",
    "services/ml_worker",
    "services/migrator",
]
