[build-system]
requires = ["setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "charisma-master"
dynamic = ["version"]
description = "Charisma Master - Python Monorepo"
requires-python = ">=3.12,<3.13"

[dependency-groups]
dev = [
    "pre-commit>=4.0.0",
    "ruff>=0.14.8",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "pytest-cov>=5.0",
    "python-semantic-release>=10.5.3",
]

[tool.ruff]
src = ["app"]
target-version = "py312"
line-length = 79
indent-width = 4
exclude = [
    ".git/",
    "venv/",
    ".venv/",
    "vscode/",
    "__pycache__/",
    ".ruff_cache/",
]

[tool.ruff.lint]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
select = ["E", "F", "N", "I", "C90", "T", "S"]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.uv.workspace]
members = [
    "packages/charisma_schemas",
    "packages/charisma_storage",
    "services/api_gateway",
    "services/ml_worker",
    "services/migrator",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "S101",  # assert statements are required in pytest
    "S105",  # hardcoded passwords in test fixtures are ok
    "S106",  # hardcoded passwords in test fixtures are ok
    "S108",  # /tmp paths in mock fixtures are ok
    "S311",  # tests may use random
    "T201",  # print() for test debugging is ok
    "N802",  # test method names can be verbose
]

[tool.setuptools]
packages = []

[tool.setuptools_scm]

[tool.semantic_release]
version_source = "tag"
commit_parser = "conventional"
upload_to_vcs_release = true
build_command = "uv build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = [
    "packages/charisma_schemas/src",
    "packages/charisma_storage/src",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::pydantic.warnings.PydanticDeprecatedSince20",
]
