[project]
name = "charisma-master"
version = "0.1.0"
description = ""
requires-python = ">=3.13,<3.14"
dependencies = [
    "black>=25.11.0",
    "celery>=5.6.0",
    "celery-types==0.23.0",
    "fastapi>=0.123.7",
    "faster-whisper>=1.2.1",
    "librosa>=0.11.0",
    "numpy>=2.3.5",
    "openai>=2.8.1",
    "opencv-python>=4.11.0.86",
    "pydantic-settings>=2.12.0",
    "python-multipart>=0.0.20",
    "redis>=7.1.0",
    "reportlab>=4.4.5",
    "requests>=2.32.5",
    "uvicorn[standard]>=0.38.0",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
]
