[project]
name = "charisma-api-gateway"
version = "0.1.0"
description = "Charisma Master API Gateway"
requires-python = ">=3.12,<3.13"
dependencies = [
    "celery>=5.6.0",
    "celery-types==0.23.0",
    "charisma-schemas",
    "charisma-storage",
    "psycopg2-binary>=2.9.10",
    "fastapi>=0.123.7",
    "pydantic-settings>=2.12.0",
    "python-multipart>=0.0.20",
    "redis>=7.1.0",
    "rutube-downloader>=0.0.8",
    "uvicorn[standard]>=0.38.0",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "ruff>=0.14.8",
]

[tool.ruff]
src = ["app"]
target-version = "py312"
line-length = 100
indent-width = 4
exclude = [
    ".git/",
    "venv/",
    ".venv/",
    "vscode/",
    "__pycache__/",
    ".ruff_cache/",
]

[tool.ruff.lint]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
select = ["E", "F", "N", "I", "C90", "T", "S"]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.uv.sources]
charisma-schemas = { workspace = true }
charisma-storage = { workspace = true }
