[project]
name = "charisma-api-gateway"
version = "0.1.0"
description = "Charisma Master API Gateway"
requires-python = ">=3.12,<3.13"
dependencies = [
    "celery>=5.6.0",
    "celery-types==0.23.0",
    "charisma-schemas",
    "charisma-storage",
    "psycopg2-binary>=2.9.10",
    "fastapi>=0.123.7",
    "pydantic-settings>=2.12.0",
    "python-multipart>=0.0.20",
    "redis>=7.1.0",
    "rutube-downloader>=0.0.8",
    "uvicorn[standard]>=0.38.0",
]

[tool.uv.sources]
charisma-schemas = { workspace = true }
charisma-storage = { workspace = true }
