[project]
name = "charisma-ml-worker"
version = "0.1.0"
description = "Charisma Master ML Worker - Celery worker for speech/video analysis"
requires-python = ">=3.12,<3.13"
dependencies = [
    "celery>=5.6.0",
    "celery-types==0.23.0",
    "charisma-schemas",
    "charisma-storage",
    "faster-whisper>=1.2.1",
    "gigachat==0.1.43",
    "librosa>=0.11.0",
    "mediapipe==0.10.21",
    "numpy>=1.26.4",
    "openai>=2.8.1",
    "opencv-contrib-python>=4.11.0.86",
    "pdfplumber>=0.11.0",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.12.0",
    "python-docx>=1.1.0",
    "python-pptx>=0.6.23",
    "redis>=7.1.0",
    "requests>=2.32.5",
]

[tool.uv.sources]
charisma-schemas = { workspace = true }
charisma-storage = { workspace = true }
